Stub user creation on assignment and assignment group create/edit forms complete.

--- a/app/views/assignment_groups/_modify_form.html.erb
+++ b/app/views/assignment_groups/_modify_form.html.erb
@@ -49,6 +49,10 @@
           </div>
         </div>
 
+        <div class="add-stub-user-modal-button-wrapper">
+          Can't find an author you want? Create a stub account for them: 
+          <%= render(partial: "users/stub_user_form_trigger") %>
+        </div>
 
       </div>
 
@@ -85,6 +89,8 @@
 
     </div>
   </div>
+
+  <%= render(partial: "users/stub_user_form") %>
 
 
 </div>
