--- a/app/views/users/_stub_user_form.html.erb
+++ b/app/views/users/_stub_user_form.html.erb
@@ -49,6 +49,7 @@ Call this partial *at the bottom* of your page (below any form).
       <div class="user-stub-form-toggle user-stub-error hidden">
         <h2>Error!</h2>
         <p class="error-message"></p>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
 
     </div>
