--- a/app/views/shared/_login_form.html.erb
+++ b/app/views/shared/_login_form.html.erb
@@ -5,7 +5,7 @@
     
     <%= form_for(:session, url: login_path) do |f| %>
 
-      <%= f.label :username %>
+      <%= f.label "Email or username" %>
       <%= f.text_field :username, class: 'form-control' %>
 
       <%= f.label :password, class: "my-5" %>
