--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,23 @@
+
 <div class="vertical-launcher">
 
-<%= link_to "Assignments", assignment_groups_path, class: "vertical-launch" %>
-<%= link_to "Analyses", analyses_path, class: "vertical-launch" %>
-<%= link_to "Software", software_index_path, class: "vertical-launch" %>
-<%= link_to "Datasets", datasets_path, class: "vertical-launch" %>
-<%= link_to "How-tos", examples_path, class: "vertical-launch" %>
+  <!-- TO DO: make these 1) render just the title on top of the thumbnails per the mockup and 2) render only the first 8 or so entries of each vertical -->
+  <!-- i tried my best. -->
 
+  <h2 class="home-page">Recent Assignments</h2>
+  <%= render(partial: "assignments/assignment_item", collection: @assignment_group, as: :assignment_group) %>
 
+  <h2 class="home-page">Recent Analyses</h2>
+  <%= render(partial: "analyses/analysis", collection: @analyses, as: :analysis) %>
 
+  <h2 class="home-page">Recent Software</h2>
+  <%= render(partial: "software/software", collection: @softwares, as: :software) %>
 
+  <h2 class="home-page">Recent Datasets</h2>
+  <%= render(partial: "datasets/dataset", collection: @datasets, as: :dataset) %>
+
+  <h2 class="home-page">Recent How-Tos</h2>
+  <%= render(partial: "examples/example", collection: @examples, as: :example) %>
 
 </div>
+
