Updated asset manifest to link only top-level files (application.js and application.css).

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,10 +3,11 @@
 @import "jquery-ui/theme";
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import "00-general";
+@import "general";
 @import "footer";
 @import "header";
 @import "resource";
 @import "search";
 @import "vertical";
-@import "bootsy";
+@import "bootsy"; 
+
