--- a/app/views/analyses/index.html.erb
+++ b/app/views/analyses/index.html.erb
@@ -6,7 +6,7 @@
   <% if can_edit? %>
     <%= link_to(new_analysis_path) do 
       %>
-	  <button class="btn btn-sm btn-link" data-toggle="tooltip" title="New Analysis">
+	  <button class="btn btn-lg btn-link" data-toggle="tooltip" title="New Analysis">
 		  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 	  </button>
     <% end %>
