--- a/app/views/assignment_groups/_modify_form.html.erb
+++ b/app/views/assignment_groups/_modify_form.html.erb
@@ -71,7 +71,15 @@
           editor_options: bootsy_editing_options %>
       </div>
 
+      <div class="form-group">
+        <%= f.label :WebLinks %><br/>
+          <% provide("Connect web resources") %>
+            <!-- Description -->
+           
+      
+    </div>
 
+      </div>
 <!--
       <p>
       You will have an opportunity to add attachments, resource links, and examples after you
