--- a/app/views/assignment_groups/index.html.erb
+++ b/app/views/assignment_groups/index.html.erb
@@ -6,7 +6,7 @@
     <% if can_edit? %>
       <%= link_to(new_assignment_group_path) do 
         %>
-      <button class="btn btn-sm btn-link" data-toggle="tooltip" title="New Assignment Group">
+      <button class="btn btn-lg btn-link" data-toggle="tooltip" title="New Assignment Group">
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
       </button>
       <% end %>
