--- a/app/views/search/show.html.erb
+++ b/app/views/search/show.html.erb
@@ -18,10 +18,10 @@
   </div>
   
   <p>
-    <a href="#" class="hide-advanced-search advanced-search-control hidden"
-      >Hide advanced search</a>
-    <a href="#" class="trigger-advanced-search advanced-search-control"
-      >Advanced search</a>
+    <button href="#" class="hide-advanced-search advanced-search-control hidden"
+      >Hide advanced search</button>
+    <button href="#" class="trigger-advanced-search advanced-search-control"
+      >Advanced search</button>
   </p>
   
   <div class="advanced-search advanced-search-control hidden">
