--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -3,8 +3,8 @@
 }
 
 .main-view-container {
-  padding-right: 1em;
-  padding-left: 1em;
+  padding-right: .25em;
+  padding-left: .25em;
 }
 
 .inline {
