--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -9,11 +9,15 @@
 }
 
 .version {
-  font-size: 55%;
+  font-size: 60%;
 }
 
 #verticals-nav {
   display: inline-block;
+
+  a {
+    font-size: 16px;
+  }
 
   ul {
     vertical-align: top;
