--- a/app/views/datasets/index.html.erb
+++ b/app/views/datasets/index.html.erb
@@ -5,7 +5,7 @@
 
   <% if can_edit? %>
     <%= link_to(new_dataset_path) do 
-      %><button class="btn btn-sm btn-link" data-toggle="tooltip" title="New Dataset">
+      %><button class="btn btn-lg btn-link" data-toggle="tooltip" title="New Dataset">
 		  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 	  </button>
     <% end %>
