--- a/app/views/assignment_groups/_modify_form.html.erb
+++ b/app/views/assignment_groups/_modify_form.html.erb
@@ -71,15 +71,56 @@
           editor_options: bootsy_editing_options %>
       </div>
 
-      <div class="form-group">
-        <%= f.label :WebLinks %><br/>
-          <% provide("Connect web resources") %>
-            <!-- Description -->
-           
-      
-    </div>
 
-      </div>
+      <% if defined? @assignment_id %>
+        <div class="form-group">
+          <div class="col">
+                  <% if can_edit? %>
+                    <%= f.label :weblinks %>
+                    <span class="edit-toggle">
+                      <a href="<%= vertical_web_resource_index_path @assignment_group %>">
+                        <button class="btn btn-sm btn-link" data-toggle="tooltip" title="New web resource">
+                          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        </button>
+                      </a>
+                    </span>
+                  <% end %>
+                </b>
+                <ul>
+                  <%= render(partial: "web_resources/web_resource_list_item", 
+                  collection: sort_by(@assignment_group.web_resources, :description), 
+                  as: :web_resource, 
+                  locals: {print_header: true, vertical: @assignment_group}) || 
+                  "<span class=\"no-data\">There are currently no web resources associated with this assignment group.</span>".html_safe %>
+                </ul>
+          </div>
+        </div>
+
+        <div class="form-group">
+                <b>Versions of assignment by class:
+                  <% if can_edit? %>
+                    <span class="edit-toggle">
+                    <a href="<%= new_assignment_group_assignment_path @assignment_group %>">
+                      <button class="btn btn-sm btn-link" data-toggle="tooltip" title="Add a new class">
+                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                      </button>
+                    </a>
+                    </span>
+                  <% end %>
+                </b>
+                <ul>
+                  <%= render(partial: "assignments/assignment_list_item", 
+                  collection: sort_by(@assignment_group.assignments, :created_at), 
+                  as: :assignment, 
+                  locals: {assignment_group: @assignment_group, target_assignment_id: @assignment.nil? ? "" : @assignment.id }) || 
+                  "<i>There are currently no assignments.</i>".html_safe %>
+                </ul>
+              </div>
+
+
+      <% end %>
+
+  </div>
 <!--
       <p>
       You will have an opportunity to add attachments, resource links, and examples after you
