--- a/app/views/examples/_example_homepage.html.erb
+++ b/app/views/examples/_example_homepage.html.erb
@@ -49,7 +49,7 @@ title_max = 100
   <% end %>
 ">
 <% end %>
-
+<% if example.is_draft != true || example.creator == current_user %>
   <div class="col-sm-4">
     
     <a href="<%= example_path(example.id) %>" data-example-id="<%= example.id %>" class="no-hover">
@@ -68,7 +68,7 @@ title_max = 100
       </div>
     </a>
   </div>
-
+<%end%>
 <% if @i == @total-1 || @i % itemsPerRow == itemsPerRow-1 %>
 </div>
 <% end %>
