--- a/app/views/datasets/_dataset_homepage.html.erb
+++ b/app/views/datasets/_dataset_homepage.html.erb
@@ -49,7 +49,7 @@ title_max = 100
   <% end %>
 ">
 <% end %>
-
+<% if dataset.is_draft != true || dataset.creator == current_user %>
   <div class="col-sm-4">
     
     <a href="<%= dataset_path(dataset.id) %>" data-dataset-id="<%= dataset.id %>" class="no-hover">
@@ -68,6 +68,7 @@ title_max = 100
       </div>
     </a>
   </div>
+<%end%>
 
 <% if @i == @total-1 || @i % itemsPerRow == itemsPerRow-1 %>
 </div>
