--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,8 +24,8 @@
 
       <div class="navbar-right">
         <ul class="nav navbar-nav">
-          <!-- <li><%= link_to "About", "#" %></li>
-          <li><%= link_to "Help", "#" %></li> -->
+         <%# <li><%= link_to "About", about_path %></li>
+           <%# <li><%= link_to "Help", "#" %></li>  
           <% if logged_in? %>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -33,6 +33,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+                <li><%= link_to "About", about_path %></li>
                 <li class="divider"></li>
                 <li>
                   <%= link_to "Log out", logout_path, method: "delete" %>
@@ -45,7 +46,11 @@
                 <li><%= link_to "Add an example", new_example_path %></li>
 				<li class="divider"></li>
 				<li>
-                  <%= link_to "Delete account", user_path(current_user), method: "delete" %>
+                  <%= link_to "Delete account", user_path(current_user), method: :delete, data: {
+              confirm: "Are you sure you want to delete this user?"}   
+                  %>
+
+
                 </li>
                 <% if current_user.is_admin? %>
                   <li class="divider"></li>
@@ -57,6 +62,7 @@
           <% else %>
             <li><%= link_to "Log in", login_path %></li>
             <li><%= link_to "Sign up", signup_path %></li>
+            <li><%= link_to "About", about_path %></li>
           <% end %>
 
         </ul>
